# BMSTU-CG

./: README.md
build-lab_05-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-lab_05-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
build-lab_07-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-lab_07-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
lab_01/: CMakeLists.txt  draw.cpp  draw.h  figures.cpp  figures.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myerrors.cpp  myerrors.h
lab_02/: CMakeLists.txt  Circle.cpp  Ellipse.cpp  Figure.cpp  Line.cpp  MyErrors.cpp  Pair.cpp  Point.cpp  Rectangle.cpp  lab_02.pro  main.cpp  mainwindow.cpp  mainwindow.ui
lab_02/inc/: Figure.h  GeometricFigures.h  MyErrors.h  Pair.h  Primitives.h  mainwindow.h
lab_03/: Algo.cpp  Algo.h  CMakeLists.txt  Errors.h  Point.cpp  Point.h  lab_03.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_04/: Algo.cpp  Algo.h  CMakeLists.txt  Geometry.cpp  Geometry.h  Graphics.h  form.cpp  form.h  form.ui  lab_04.pro  mainwindow.cpp  mainwindow.ui
lab_04/lab_04/: Algo.cpp  Algo.h  Geometry.cpp  Geometry.h  lab_04.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_05/: CMakeLists.txt  Edge.h  Errors.cpp  Graphics.h  lab_05.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_06/: CMakeLists.txt  Errors.h  Graphics.h  lab_06.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_07/: CMakeLists.txt  clipping.cpp  clipping.h  lab_07.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_08/: CMakeLists.txt  Graphics.h  clipping.cpp  clipping.h  lab_08.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_09/: CMakeLists.txt  Support.cpp  Support.h  clipping.cpp  clipping.h  lab_09.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_10/: mainwindow.ui
